feat: getSubscriptionsByUserId implementamos este endpoint getSubscriptionsByUserId
